tests/baselines/reference/decoratorMetadataGenericTypeVariable.errors.txt
decoratorMetadataGenericTypeVariable.ts(2,4): error TS2304: Cannot find name 'Decorate'.
decoratorMetadataGenericTypeVariable.ts(3,3): error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.


==== decoratorMetadataGenericTypeVariable.ts (2 errors) ====
    export class C<TypeVariable> {
      @Decorate
       ~~~~~~~~
!!! error TS2304: Cannot find name 'Decorate'.
      member: TypeVariable;
      ~~~~~~
!!! error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.
    }
    